<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/signUpFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.t3ddyss.clother.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
...
            android:id="@+id/action_signUpFragment_to_emailActionFragment"
            app:destination="@id/emailActionFragment"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/signUpFragment"
...
