...
        please follow instructions we sent to\u0020</string>
    <string name="auth_password_reset_message">To reset your password,
        please follow instructions we sent to\u0020</string>
    <string name="auth_your_email">your email address</string>
    <string name="auth_check_inbox">Check your inbox</string>
    <string name="auth_name_requirements">Name should contain at least 2 and less than 50 characters</string>
    <string name="auth_email_invalid">Email address is invalid</string>
    <string name="auth_password_requirements">Password should be a combination of uppercase letters,
        lowercase letters, numbers, and symbols and contain from 8 to 25 characters</string>

    <string name="offer">Offer</string>
    <string name="offer_select_category">Select category</string>
    <string name="offer_create">Create new offer</string>
...
