...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_clother" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_horizontal_margin"
                android:background="@drawable/button_rounded"
                android:text="@string/auth_sign_in"
                app:backgroundTint="@null"
...
